tests/syntax-error/init-list2.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g init-list2.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: init-list2.silly:8:1: error: For variable 'w', more initializers (3) specified than number of elements (2).
// CHECK:     8 | INT32 w[2] {1,2,3};
// CHECK:       | ^


INT32 w[2] {1,2,3};
